tests/negative/import_show2_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

import .import_show1_b

a:
  return "a"
